--- a/public/components/button/button.css
+++ b/public/components/button/button.css
@@ -1,18 +1,42 @@
 .button {
-	background-color: #4dca62;
-    border: .1rem solid #4dca62;
-    border-radius: .4rem;
-    color: #fff;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: red;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 15px;
+    padding: 0px;
+    width: 100px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.button span {
     cursor: pointer;
     display: inline-block;
-    font-size: 1.1rem;
-    font-weight: 700;
-    height: 3.8rem;
-    letter-spacing: .1rem;
-    line-height: 3.8rem;
-    padding: 0 3rem;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    white-space: nowrap;
+    position: relative;
+    transition: 0.5s;
+}
+
+.button span:after {
+    content: '»';
+    font-size: 30px;
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    align-content: center;
+    right: -20px;
+    transition: 0.5s;
+    margin: -1px;
+}
+
+.button:hover span {
+    padding-right: 20px;
+}
+
+.button:hover span:after {
+    opacity: 1;
+    right: 0;
 }
