--- a/public/components/button/button.css
+++ b/public/components/button/button.css
@@ -1,7 +1,7 @@
 .button {
     display: inline-block;
     border-radius: 4px;
-    background-color: red;
+    background-color: chartreuse;
     border: none;
     color: #FFFFFF;
     text-align: center;
@@ -13,30 +13,3 @@
     margin: 5px;
 }
 
-.button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.button span:after {
-    content: '»';
-    font-size: 30px;
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    align-content: center;
-    right: -20px;
-    transition: 0.5s;
-    margin: -1px;
-}
-
-.button:hover span {
-    padding-right: 20px;
-}
-
-.button:hover span:after {
-    opacity: 1;
-    right: 0;
-}
