--- a/public/style.css
+++ b/public/style.css
@@ -10,9 +10,9 @@ body {
   box-sizing: border-box;
   transition: background-color 1s ease-in-out;
 }
-.cell0 { background-image: url(a.png); }
-.cell1 { background-image: url(b.png); }
-.cell2 { background-image: url(g.png); }
+.cell0 { background-image: url(images/a.png); }
+.cell1 { background-image: url(images/b.png); }
+.cell2 { background-image: url(images/g.png); }
 
 #game {
   width: 100vmin;
