--- a/public/components/form/form.tmpl.xml
+++ b/public/components/form/form.tmpl.xml
@@ -1,13 +1,22 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="data">
-	<form>
-		<h1>
-			<fest:value>data.title</fest:value>
-		</h1>
-		<div>
-			<fest:for iterate="data.fields" index="i" value="field">
-				<input type="{field.type || 'text'}" name="{field.name}" placeholder="{field.placeholder}"/>
-			</fest:for>
-		</div>
-		<div class="js-controls"></div>
-	</form>
+    <style>
+
+    </style>
+    <div class="data">
+        <img src="../../data/images/rainbow-square.gif" alt="лого" align="middle" width="40%"></img>
+        <form>
+            <h1>
+                <fest:value>data.title</fest:value>
+            </h1>
+            <div class="js-social"></div>
+            <div>
+                <fest:for iterate="data.fields" index="i" value="field">
+                    <br>
+                        <input type="{field.type || 'text'}" name="{field.name}" placeholder="{field.placeholder}"/>
+                    </br>
+                </fest:for>
+            </div>
+            <div class="js-controls"></div>
+        </form>
+    </div>
 </fest:template>
