--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,11 +1,27 @@
-.form_button {
-
+.all {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.data {
+    width: 400px; /* Ширина элемента в пикселах */
+    padding: 10px; /* Поля вокруг текста */
+    margin: auto; /* Выравниваем по центру */
+}
+.input_text {
+    width: 300px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box
 }
 
-.form_button__submit {
-
+@font-face {
+    font-family: Squareo; /* Гарнитура шрифта */
+    src: url("../data/fonts/Squareo.ttf"); /* Путь к файлу со шрифтом */
 }
 
-.form_button__other {
-
+h1 {
+    font: 32pt  Squareo;
 }
