--- a/public/components/form/form.tmpl.xml
+++ b/public/components/form/form.tmpl.xml
@@ -1,16 +1,20 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="data">
     <form>
         <div class="grid">
-                <div class="grid__row">
-                    <img src="../../data/images/rainbow-square.gif" alt="лого" align="middle" width="30%" height = "30%"></img>
-                </div>
+            <div class="grid__row" flex="1">
 
-        <div class="grid__row ">
-                <h1>
-                    <fest:value>data.title</fest:value>
-                </h1>
             </div>
-                <div class="grid__row ">
+            <div class="grid__column">
+                <div class="grid__row" flex="1">
+                    <img src="../../data/images/rainbow-square.gif" alt="лого" align="middle" width="6%"
+                         height="6%"></img>
+                </div>
+                <div class="grid__row " flex="2">
+                    <h1>
+                        <fest:value>data.title</fest:value>
+                    </h1>
+                </div>
+                <div class="grid__row " flex="1">
 
                     <fest:for iterate="data.social" index="i" value="social">
                         <div class="grid__item">
@@ -20,14 +24,22 @@
                         </div>
                     </fest:for>
                 </div>
-                    <fest:for iterate="data.fields" index="i" value="field">
-                        <div class="grid__row ">
-                            <input type="{field.type || 'text'}" name="{field.name}" placeholder="{field.placeholder}"/>
-
+                <fest:for iterate="data.fields" index="i" value="field">
+                    <div class="grid__row grid__padding7" flex="1">
+                        <input type="{field.type || 'text'}" name="{field.name}" placeholder="{field.placeholder} "
+                               class="form-contro"/>
+                    </div>
+                </fest:for>
+                <div class="grid__row " flex="1">
+                    <fest:for iterate="data.controls" index="i" value="control">
+                        <div class="grid__item ">
+                            <button type="{control.type}" class="{control.class}">
+                                <fest:value>control.text</fest:value>
+                            </button>
                         </div>
                     </fest:for>
-
-                <div class="js-controls grid__row"></div>
+                </div>
+            </div>
         </div>
     </form>
 
