--- a/public/css/form.css
+++ b/public/css/form.css
@@ -23,44 +23,30 @@
 }
 
 h1 {
-    font: 32pt  Squareo;
-}
-
-.Aligner {
-    display: flex;
-    justify-content: center;
-}
-
-.Aligner-item {
-    max-width: 50%;
+    font: 35pt  Squareo;
 }
 
 
 
-.item {
-    align-self: flex-start;
-    flex: 1;
-    padding: 12px;
-}
 .grid {
-    border: solid 1px #e7e7e7;
+    border: solid 0px #e7e7e7;
+    margin-top: 2%;
+}
+
+.grid__column {
+    display: flex;
     flex-direction: column;
-    display: flex;
     justify-content: center;
-
 }
-
 .grid__row {
-    justify-content: center;
-
     display: flex;
-    padding: 7px;
-    max-width: 50%;
-}
-
-.grid__item {
-    flex: 2;
+    flex-direction: row;
     justify-content: center;
-    padding: 12px;
-    border: solid 1px #e7e7e7;
+}
+.grid__padding7{
+    padding: 7px;
+}
+.grid__item {
+    padding: 7px;
+    border: solid 0px #e7e7e7;
 }
