beta mainMenu page

--- a/public/components/form/form_reg.tmpl.xml
+++ b/public/components/form/form_reg.tmpl.xml
@@ -1,9 +1,6 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="data">
     <form>
         <div class="grid">
-            <div class="grid__row" flex="1">
-
-            </div>
             <div class="grid__column">
                 <div class="grid__row" flex="1">
                     <img src="../../data/images/rainbow-square.gif" alt="лого" align="middle" width="6%"
@@ -17,8 +14,7 @@
 
                 <fest:for iterate="data.fields" index="i" value="field">
                     <div class="grid__row grid__padding7" flex="1">
-                        <input type="{field.type || 'text'}" name="{field.name}" placeholder="{field.placeholder} "
-                               class="form-contro"/>
+                        <input type="{field.type || 'text'}" name="{field.name}" placeholder="{field.placeholder} "/>
                     </div>
                 </fest:for>
                 <div class="grid__row " flex="1">
