--- a/public/components/link/link.css
+++ b/public/components/link/link.css
@@ -9,6 +9,7 @@
     outline: none;
     text-decoration: none;
     font: 35pt  Squareo;
+    width: initial;
 }
 
 .ghost-button-rounded-corners:hover,
